# langchain-vercel-ai-sdk-adapter

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/superpowers/plans/: 2026-04-14-langchain-ai-sdk-adapter.md
src/langchain_ai_sdk_adapter/: __init__.py  converter.py  messages.py
tests/: test_converter.py  test_integration.py  test_messages.py
